<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_18dp"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_liby"
        android:icon="@drawable/ic_library_books_black_18dp"
        android:title="@string/nav_liby" />
    <item
        android:id="@+id/nav_sport"
        android:icon="@drawable/ic_games_black_18dp"
        android:title="@string/nav_sport" />
    <item
        android:id="@+id/nav_news"
        android:icon="@drawable/ic_satellite_black_18dp"
        android:title="@string/nav_news" />
    <item
        android:id="@+id/nav_explore"
        android:icon="@drawable/ic_receipt_black_18dp"
        android:title="@string/nav_explore" />
</menu>